# SentimeAnalyzer

./: CMakeLists.txt  DSString.cpp  DSString.h  Test_Tweet.cpp  Test_Tweet.h  Train_Tweet.cpp  Train_Tweet.h  main.cpp  manager.cpp  manager.h  sample_training_50.csv  tests.cpp
